// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsSection rendering of comment row is dependent on description value renders and matches saved snapshot for description value:  1`] = `
<div
  className="scanDetailsSection"
>
  <h2>
    Scan details
  </h2>
  <ul
    className="detailsSectionList"
  >
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <UrlIcon />
      </span>
      <span
        className="screenReaderOnly"
      >
        target page:
      </span>
      <span
        className="text"
      >
        <NewTabLink
          href="https://page-url/"
        >
          https://page-url/
        </NewTabLink>
      </span>
    </li>
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <DateIcon />
      </span>
      <span
        className="screenReaderOnly"
      >
        scan date:
      </span>
      <span
        className="text"
      >
        2018-03-12 11:24 PM UTC
      </span>
    </li>
  </ul>
</div>
`;

exports[`DetailsSection rendering of comment row is dependent on description value renders and matches saved snapshot for description value: description-text 1`] = `
<div
  className="scanDetailsSection"
>
  <h2>
    Scan details
  </h2>
  <ul
    className="detailsSectionList"
  >
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <UrlIcon />
      </span>
      <span
        className="screenReaderOnly"
      >
        target page:
      </span>
      <span
        className="text"
      >
        <NewTabLink
          href="https://page-url/"
        >
          https://page-url/
        </NewTabLink>
      </span>
    </li>
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <DateIcon />
      </span>
      <span
        className="screenReaderOnly"
      >
        scan date:
      </span>
      <span
        className="text"
      >
        2018-03-12 11:24 PM UTC
      </span>
    </li>
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <CommentIcon />
      </span>
      <span
        className="screenReaderOnly"
      >
        comment:
      </span>
      <span
        className="text description-text"
      >
        description-text
      </span>
    </li>
  </ul>
</div>
`;

exports[`DetailsSection rendering of comment row is dependent on description value renders and matches saved snapshot for description value: null 1`] = `
<div
  className="scanDetailsSection"
>
  <h2>
    Scan details
  </h2>
  <ul
    className="detailsSectionList"
  >
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <UrlIcon />
      </span>
      <span
        className="screenReaderOnly"
      >
        target page:
      </span>
      <span
        className="text"
      >
        <NewTabLink
          href="https://page-url/"
        >
          https://page-url/
        </NewTabLink>
      </span>
    </li>
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <DateIcon />
      </span>
      <span
        className="screenReaderOnly"
      >
        scan date:
      </span>
      <span
        className="text"
      >
        2018-03-12 11:24 PM UTC
      </span>
    </li>
  </ul>
</div>
`;

exports[`DetailsSection rendering of comment row is dependent on description value renders and matches saved snapshot for description value: undefined 1`] = `
<div
  className="scanDetailsSection"
>
  <h2>
    Scan details
  </h2>
  <ul
    className="detailsSectionList"
  >
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <UrlIcon />
      </span>
      <span
        className="screenReaderOnly"
      >
        target page:
      </span>
      <span
        className="text"
      >
        <NewTabLink
          href="https://page-url/"
        >
          https://page-url/
        </NewTabLink>
      </span>
    </li>
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <DateIcon />
      </span>
      <span
        className="screenReaderOnly"
      >
        scan date:
      </span>
      <span
        className="text"
      >
        2018-03-12 11:24 PM UTC
      </span>
    </li>
  </ul>
</div>
`;
